revised classification keywords again
mystery error is caused by references: hyper refs going over page
boundaries.

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -12,7 +12,7 @@
 % Arabic page numbers for submission.  Remove this line to eliminate
 % page numbers for the camera ready copy 
 
-\pagenumbering{arabic}
+%\pagenumbering{arabic}
 
 % Load basic packages
 \usepackage{balance}  % to better equalize the last page
@@ -118,28 +118,8 @@
   Collaborative Interaction;
   Methodology}
 
-\category{H.5.5.}{Information Interfaces and Presentation
-  (e.g. HCI)}{Sound and Music Computing,}{ Methodologies and techniques}
-
-% \category{See
-%   \url{http://acm.org/about/class/1998/} for the full list of ACM
-%   classifiers. This section is required.}{}{}
-
-%\section{General comments}
-% \begin{itemize}
-% \item we should be clear (and careful) where we're talking about
-%   groups TMs, and where we're talking about individual performers
-% \item what's the terminology we're using for a ``performance''? Is it
-%   ``performance'', or is that too music-specific? ``Session''?
-%   Alternatives are ``activity'', or ``interaction'', but they're so
-%   general\ldots This decision has implications for our other
-%   terminology: participant vs performer vs musician, etc.
-% \item Title: maybe ``Traces through time: making sense of longitudinal
-%   open-ended interaction data'' or some such? I think that's our big
-%   contribution: it takes the in-the-wild, practitioner-driven research
-%   program stuff and tries to make some quantitative sense out of it
-%   post-hoc.
-% \end{itemize}
+\category{H.5.5.}{Information Interfaces and Presentation (e.g.
+  HCI)}{Sound and Music Computing}[Methodologies and techniques]
 
 \section{Introduction}
 
@@ -152,6 +132,7 @@
     performance with percussion instruments, and performance with just
     iPads.\label{fig:three-performance-contexts}}
 \end{figure*}
+
 
 Modern computing devices and interfaces continue to present
 opportunities to support new kinds of creative expression and
@@ -212,6 +193,7 @@ rehearsal, study), session \emph{type} (improvisation or composition),
 and \emph{instrumentation} (iPads-only, or iPads with acoustic
 percussion). The distribution of recorded sessions by context and type
 is shown in Figure \ref{fig:count-data}.
+
 
 % It is a feature of creative expression in the arts that highly skilled
 % practitioners exploit simple tools to produce works of beauty whether
@@ -520,7 +502,7 @@ using matrices and simple measures can lead to new insights into HCI
 interactions outside the lab.
 
 
-%\pagebreak
+\pagebreak
 \bibliographystyle{SIGCHI-Reference-Format}
 \bibliography{references}
 
