yes, it's still the median

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -192,8 +192,7 @@ percussion notation using the apps.
 Some of these session contexts are are shown
 Figure~\ref{fig:three-performance-contexts} and other descriptive
 statistics about the corpus are shown in Table \ref{corpus-table}.
-In our corpus, the median length of sessions is 7m26s (IS THIS STILL THE MEDIAN IGNORING THE
-DEMONSTRATION AND DATA GATHERING SESSIONS?) and the median
+In our corpus, the median length of sessions is 7m26s and the median
 number of participants per ensemble is four. Each session record is
 labelled with metadata about its \emph{context} (concert,
 rehearsal, recording), its \emph{type} (improvisation or composition),
