adjusted comments to be in comments - address these tonight

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -269,6 +269,8 @@ vocabularies of continuous macro gestures that unfold over
 several seconds of touch interaction~\cite{Martin:2014cr}, these logs
  can be thought of as a sequence of such
 states~\cite{Pressing:1988uo} for each performer.
+% TODO need to refine the meaning of this sentence - now Pressing
+% doesn't make sense as a citation.
 If a performers' touch interactions can be classified as belonging
 to one of $m$ distinct states, then, over the course of a session, each
 participant $X$ generates a length $N$ sequence of these interaction
@@ -380,7 +382,9 @@ instrumentation ($F(1,86) = 10.48, p < 0.01$).
 
 For entropy, significant main effects were found due to session
 context ($F(2,86) = 12.10, p < 0.001$), and instrumentation
-($F(1,86) = 25.86$) (WHAT IS THE P VALUE HERE?). There was no main effect for session type although
+($F(1,86) = 25.86$).
+% TODO (WHAT IS THE P VALUE HERE?). 
+There was no main effect for session type although
  the interaction of session type and
 instrumentation was found to be significant
 ($F(1,86) = 9.93, p<0.01$).
